fix: Make sure legend is visible, even is full screen

--- a/website/web/static/tree.css
+++ b/website/web/static/tree.css
@@ -195,7 +195,7 @@ hr {
 
 #legend {
   position: fixed;
-  top: 55vw;
+  top: 60%;
   right: 5px;
   background: white;
   border: 2px solid;
